release: Budget AI v0.3.5 Delivery Candidate (#1)
Redesign completo da interface para o fluxo DIO Spring AI, hardening de Tool Calling/domínio/erros, TTS Spring AI opcional com fallback local e preparação do instalador Windows v0.3.5.